test/log/iir/vsrdotiiru_v_i32_d3s1.txt
vsrdotiiru_v_i32_d3s1.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsrdotiiru_v_i32_d3s1.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsrdotiiru_v_i32_d3s1.c:20:40: warning: backslash and newline separated by space
   20 |  #define data_init(a, b, n, threshold) \
      |                                         
vsrdotiiru_v_i32_d3s1.c:21:35: warning: backslash and newline separated by space
   21 |      for(int i = 0; i < n; i++) { \
      |                                    
vsrdotiiru_v_i32_d3s1.c:22:40: warning: backslash and newline separated by space
   22 |              a[i] = random(threshold); \
      |                                         
vsrdotiiru_v_i32_d3s1.c:23:27: warning: backslash and newline separated by space
   23 |              b[i] = a[i]; \
      |                            
vsrdotiiru_v_i32_d3s1.c:29:6: warning: no previous prototype for 'vsrdotiiru_v_i32_d3s1_golden' [-Wmissing-prototypes]
   29 | void vsrdotiiru_v_i32_d3s1_golden(int32_t base[],int32_t *a,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
vsrdotiiru_v_i32_d3s1.c: In function 'vsrdotiiru_v_i32_d3s1_golden':
vsrdotiiru_v_i32_d3s1.c:31:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   31 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vsrdotiiru_v_i32_d3s1.c:31:1: note: each undeclared identifier is reported only once for each function it appears in
vsrdotiiru_v_i32_d3s1.c:31:9: error: expected ';' before 'Line'
   31 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vsrdotiiru_v_i32_d3s1.c:29:43: warning: unused parameter 'base' [-Wunused-parameter]
   29 | void vsrdotiiru_v_i32_d3s1_golden(int32_t base[],int32_t *a,int32_t *exp_result) {
      |                                   ~~~~~~~~^~~~~~
vsrdotiiru_v_i32_d3s1.c:29:59: warning: unused parameter 'a' [-Wunused-parameter]
   29 | void vsrdotiiru_v_i32_d3s1_golden(int32_t base[],int32_t *a,int32_t *exp_result) {
      |                                                  ~~~~~~~~~^
vsrdotiiru_v_i32_d3s1.c:29:70: warning: unused parameter 'exp_result' [-Wunused-parameter]
   29 | void vsrdotiiru_v_i32_d3s1_golden(int32_t base[],int32_t *a,int32_t *exp_result) {
      |                                                             ~~~~~~~~~^~~~~~~~~~
vsrdotiiru_v_i32_d3s1.c: In function 'main':
vsrdotiiru_v_i32_d3s1.c:58:14: warning: implicit declaration of function 'vsrdotiiru_v_i32_d3s1'; did you mean 'vsrdotiiru_v_u32_d3s1'? [-Wimplicit-function-declaration]
   58 |     result = vsrdotiiru_v_i32_d3s1(base,a);
      |              ^~~~~~~~~~~~~~~~~~~~~
      |              vsrdotiiru_v_u32_d3s1
vsrdotiiru_v_i32_d3s1.c:58:14: error: incompatible types when assigning to type 'int32x16x3_t' from type 'int'
vsrdotiiru_v_i32_d3s1.c:64:76: warning: format '%x' expects argument of type 'unsigned int', but argument 6 has type 'int32_t' {aka 'long int'} [-Wformat=]
   64 |                 printf("Failed: result.val[%d][%d] = %x, exp_result[%d] = %x\n", i,j, result.val[i][j], i*ELE_NUM+j, exp_result[i*ELE_NUM+j]);
      |                                                                           ~^                                         ~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                            |                                                   |
      |                                                                            unsigned int                                        int32_t {aka long int}
      |                                                                           %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsrdotiiru_v_i32_d3s1.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsrdotiiru_v_i32_d3s1"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsrdotiiru_v_i32_d3s1.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsrdotiiru_v_i32_d3s1.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed